--- a/webapp/avision/Tpl/MG_score/init.html
+++ b/webapp/avision/Tpl/MG_score/init.html
@@ -5,6 +5,12 @@
 </block>
 
 <block name="bl_main">
+    <style>
+        .ansercolume{
+            width=250px;word-break:break-all;
+            word-wrap:break-word;white-space:pre-wrap;
+        }
+    </style>
     <div style="padding: 15px;">
         <div id="blkFilter">
             {:R('MD_ChannelSelector/showfilter',array( $contextToken, $right, "$account" )) }
