--- a/webroot/play.html
+++ b/webroot/play.html
@@ -112,36 +112,17 @@
 
 <!-- 频道封面层，初始化时通过 $showCover 变量控制是否显示 -->
 <div id="blkCover" class="fullScreen layerCover" style="overflow:hidden;background-color: #cccccc;">
-    <div id="blkCoverContent" class="article" style="position: relative; margin:0 auto; height: 100%; width:100%; max-width:640px; overflow-y:auto; overflow-x:hidden;background-color: #ffffcc;">
+    <div style="position: relative; margin:0 auto; height: 100%; width:100%; max-width:640px;">
+        <div id="blkCoverContent" class="article" style="position: relative; margin:0 auto; height: 100%; width:100%; max-width:640px; overflow-y:auto; overflow-x:hidden;background-color: #ffffcc;">
 
-    </div>
-    <div style="position:absolute; top:30px;right: 30px; height:64px; width:64px; text-align: center; overflow: hidden; ">
-        <div  blk="blkCover" class="layerCoverBtn btnCircle btnCloseBlk" style="height:64px; width:64px;background-color: rgba(30,30,30,.3); color: #fff;">
-            <img src="Public/images/enterchannel.png" alt="进入频道" style="height: 100%;width: 100%">
         </div>
-        <img src="Public/images/timg.gif" class="layerCoverBtn btnCircle" style="width: 100%; height: 100%">
-    </div>
-    <!--
-    <div style="position:absolute; top:30px;width: 100%; text-align: center;">
-        <div style="position:relative; display:inline-block; width:100%; max-width:640px; ">
-
-            <div  blk="blkCover" class="layerCoverBtn btnCircle btnCloseBlk"
-                 style="position: absolute; right: 30px; width:4em; padding:1em;height:4em;display: flex;/*设置外层盒子display为flex*/
-            justify-content:center;/*设置内层盒子的水平居中*/
-            align-items:center;/*设置内层盒子的垂直居中*/
-            font-weight: lighter;
-            background-color: rgba(30,30,30,.3); color: #fff;">
-                <div >进入频道</div>
-                <div style="width:4em; height: 4em;flex: auto">
-                    <img src="Public/images/loading.gif" style="width: 100%; height: 100%">
-                </div>
+        <div style="position:absolute; top:30px;right: 30px; height:64px; width:64px; text-align: center; overflow: hidden; ">
+            <div  blk="blkCover" class="layerCoverBtn btnCircle btnCloseBlk" style="height:64px; width:64px;background-color: rgba(30,30,30,.3); color: #fff;">
+                <img src="Public/images/enterchannel.png" alt="进入频道" style="height: 100%;width: 100%">
             </div>
-
-
+            <img src="Public/images/timg.gif" class="layerCoverBtn btnCircle" style="width: 100%; height: 100%">
         </div>
     </div>
-    -->
-
 </div>
 
 
