--- a/webapp/avision/Tpl/Console/stream_w.html
+++ b/webapp/avision/Tpl/Console/stream_w.html
@@ -186,6 +186,7 @@ function makeIdStream(account){
 			<th data-options="field:'platform', width:80,align:'center', halign:'center',
 			editor:'textbox' ">平台</th>
 		</eq>
+		<th data-options="field:'app'">APP</th>
 	</tr>
 	</thead>
 </table>
