2020-10-13 小修改及小BUG
1、课程列表中学习进度还原为显示已学习时长
2、修复无法显示学习功能中，答案分析小BUG
3、允许普通播主修改推流平台

--- a/webapp/avision/Tpl/Console/stream_w.html
+++ b/webapp/avision/Tpl/Console/stream_w.html
@@ -127,7 +127,7 @@ function makeIdStream(account){
 		onEdit:function(index,row){
 			if('true'!={$isAdmin} ){
 				var ed=$(this).edatagrid('getEditor',{ index:index,field:'idstring'});
-				$(ed.target).textbox({editable:false});	//禁止修改
+				//$(ed.target).textbox({editable:false});	//禁止修改
 				
 				if('ban'==row.status){
 					var ed=$(this).edatagrid('getEditor',{ index:index,field:'status'});
@@ -182,10 +182,10 @@ function makeIdStream(account){
 				if('true'==value) return '推流中';
 				else return '断流';
 			} ">推流状态</th>
-		<eq name="isAdmin" value="true"> 
+
 			<th data-options="field:'platform', width:80,align:'center', halign:'center',
 			editor:'textbox' ">平台</th>
-		</eq>
+
 		<th data-options="field:'app'">APP</th>
 	</tr>
 	</thead>
