--- a/webapp/avision/Tpl/MG_learning/analys.html
+++ b/webapp/avision/Tpl/MG_learning/analys.html
@@ -23,7 +23,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        var data = {$pipeData}
+        var data = {$pipeData};
 
 console.log(data);
         var placeholder = $("#chartContainer");
