2021-06-10 观众管理增加用户ID输出
改正了ChannelRelUserViewModel.php的BUG

--- a/webapp/avision/Tpl/Subscriber/authorize.html
+++ b/webapp/avision/Tpl/Subscriber/authorize.html
@@ -124,6 +124,7 @@ function setUserStatus(status){
 			<neq name="multiChn" value="0">
 				<th data-options="field:'chnname', width:200,align:'left', halign:'center' ">频道名称</th>
 			</neq>
+			<th data-options="field:'uid', width:80,align:'left', halign:'center' ">用户ID</th>
 			<th data-options="field:'account', width:150,align:'left', halign:'center' ">观众账号</th>
 			<th data-options="field:'username', width:150,align:'left', halign:'center'">观众名称</th>
 			<th data-options="field:'realname', width:100,align:'left', halign:'center'">真实姓名</th>
