--- a/webapp/avision/Tpl/CH_220/complementUserInfo.html
+++ b/webapp/avision/Tpl/CH_220/complementUserInfo.html
@@ -97,8 +97,8 @@
                 <input class="easyui-textbox" name="phone" value="{$phone}" label="电话:" labelPosition="top" data-options="prompt:'请输入电话号码...',validType:'length[8,18]'" style="width:100%;">
             </div>
             <div class="input_item">
-                <input id="company" class="easyui-combobox" name="company" vlaue="{$company}" label="工作单位(请输入全称):" labelPosition="top" style="width:100%;"
-                       data-options="prompt:'请输入工作单位...', panelHeight:100,valueField:'id',textField:'txt', data: {$companyListJson} " >
+                <input  class="easyui-textbox" name="company" value="{$company}" label="工作单位(请输入全称):" labelPosition="top" style="width:100%;"
+                       data-options="prompt:'请输入工作单位...'" >
             </div>
             <div class="input_item">
                 <input class="easyui-textbox" name="udef1" value="{$udef1}" label="岗位:" labelPosition="top" data-options="prompt:'',validType:'length[2,40]'" style="width:100%;">
@@ -136,7 +136,7 @@
 </div>
 <script>
     $(document).ready(function(){
-        $("#company").combobox('select','{$company}');
+        //$("#company").combobox('select','{$company}');
         $("#groups").combobox('select','{$groups}');
     });
     $("#my-logo").on('click',function(event){
