2022-06-01 增加SI上传视频接口
1、增加SI上传视频接口，SI可上传新视频或覆盖旧视频
2、增加SI上传视频的DEMO
3、用户属性增加：最大录像文件数，最大上传次数，上传文件最大体积。这些属性可通过用户管理界面修改。
4、增加上传历史记录表
5、修改播放器BUG：默认是直播时，直接播放点播链接会失败。

--- a/webapp/avision/Tpl/SI/tools.html
+++ b/webapp/avision/Tpl/SI/tools.html
@@ -17,7 +17,11 @@
 			<td>account: </td><td><input type='text' name='account' value='{$account}' style="width:400px" ></td>
 		</tr>
 		<tr>
-			<td>tm: </td><td><input type='text' name='tm' value='{$tm}' style="width:400px" ><br>Now is : {$now}</td>
+            <td>now: </td>
+            <td>
+                {$now} + expire(秒）: <input type='text' name='expire' value='{$expire}' style="width:40px" >
+			    = tm: <input type='text' name='tm' value='{$tm}' style="width:100px" >({$tm10})
+            </td>
 		</tr>
 	</table>
 	<input type="submit" value="更新">
