2023-03-28 修改扩展时间拉流地址的bug

--- a/webapp/avision/Tpl/Console/stream_w.html
+++ b/webapp/avision/Tpl/Console/stream_w.html
@@ -79,6 +79,7 @@ function makeIdStream(account){
 			var extHours=$('#extHours').val();
 			$.extend(data,{'extHours':extHours});
 
+			console.log(data)
 			$.post('__APP__/Console/getPushUrlAjax',data,function(data){
 				console.log(data);
 				$('#msg').html(data);
